# MyInvestStrategyIndex

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/plans/: 2026-07-11-us-etf-compare-design.md  2026-07-11-us-etf-compare.md  2026-07-11-us-etf-strategy-observer.md  2026-07-12-chart-interaction-design.md  2026-07-12-us-etf-observer-universe-design.md
myinvest_strategy_index/: __init__.py  calmar_optimizer.py  config.py  cycle_backtests.py  regime_allocator.py  regime_backtester.py  regime_detector.py  sensitivity_analysis.py  value_compare.py  walk_forward_validator.py  webapp.py
reports/calmar_optimizer/: calmar_optimization_2026-07-03_153952.md  calmar_optimization_2026-07-03_153952_equity.csv  calmar_optimization_2026-07-03_153952_weights.csv
tests/: test_calmar_optimizer.py  test_cycle_backtests.py  test_regime_allocator.py  test_regime_backtester.py  test_regime_detector.py  test_sensitivity_analysis.py  test_value_compare.py  test_walk_forward_validator.py  test_webapp.py
